// Timer-related stuff
syntax = "proto3";
package lh_proto;

option go_package = ".;model";
option java_multiple_files = true;
option java_package = "io.littlehorse.common.proto";

import "variable.proto";
import "google/protobuf/timestamp.proto";

message ExternalEventPb {
    string wf_run_id = 1;
    string external_event_def_name = 2;
    string guid = 3;
    google.protobuf.Timestamp created_at = 4;
    VariableValuePb content = 5;
    optional int32 thread_run_number = 6;
    optional int32 node_run_position = 7;
    bool claimed = 8;
}

